feat: Implement order-threshold cashback rewards system
- Add CashbackInfoCard component to wallet page
- Add multilingual support (en, ro, es, fr) for cashback feature
- Implement wallet balance refresh on page mount
- Match card heights across wallet page with flexbox layout
- Anchor cashback note to bottom of card for clean UI

--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -550,7 +550,10 @@
     "transactionTypeCashback": "Remboursement",
     "transactionTypePurchase": "Achat",
     "transactionTypeRefund": "Remboursement",
-    "comingSoon": "Prochainement..."
+    "comingSoon": "Prochainement...",
+    "cashbackRewards": "Récompenses Cashback",
+    "cashbackDescription": "Après {{threshold}} achats réussis, vous recevrez automatiquement {{percentage}}% de cashback dans votre portefeuille, sur chaque achat éligible par la suite !",
+    "cashbackNote": "Le pourcentage de cashback s'applique uniquement à la valeur des produits (après réductions promotionnelles). Exclut la TVA et les frais de traitement."
   },
   "appBanner": {
     "title": "Ouvrir dans l'App ChillSim",
