feat(promotions): implement smart promotions subscription system with dual auth support
- Created promotions subscription system to increase marketing opt-ins
- Implemented smart trigger mechanisms with page-specific optimizations
- Added global shared dismissal state across all pages

Components:
- usePromotionsPopup hook with intelligent scroll detection and time-based triggers
- PromotionsModal with mobile-optimized responsive design
- PromotionsInline for order success popup
- authHelpers utilities for dual authentication support (main + tmp)

Trigger Logic:
- Plans page: 45s time-only trigger (no scroll) for browsing optimization
- My eSIM & Orders: 30s OR smart scroll (60-80% auto-detect based on page height)
- Minimum time gates (15-20s) to prevent premature interruption
- Global storage key ensures dismissal applies across all pages

UX Improvements:
- Compact mobile design (icon+title combined, fits iPhone 12 Pro without scrolling)
- Smart height detection adapts scroll threshold to content length
- Side-by-side action buttons on desktop, stacked on mobile
- Expert copywriting: 'Yes, send me exclusive deals!' (vs dry 'Enable notifications')

Authentication:
- Full support for both main and tmp authenticated users
- Centralized helpers prevent inconsistent auth checks
- Shared user_info updates work for both auth types

UI Updates:
- Benefits page: Added styled toggle with disclaimer
- Profile page: Replaced disabled toggle with functional version + disclaimer
- All components use consistent design and improved copy

Translations:
- Updated all 4 languages (EN, ES, FR, RO) with engaging benefit-focused copy
- GDPR-compliant disclaimers on all components

Storage Rules:
- Dismiss (X): 14 days cooldown
- Remind Later: 7 days cooldown
- Don't Show Again: 90 days cooldown

Files Modified:
- src/core/custom-hook/usePromotionsPopup.jsx (created)
- src/core/utils/authHelpers.js (created)
- src/components/promotions/PromotionsModal.jsx (created)
- src/components/pro

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -621,6 +621,35 @@
       "manageAccount": "My Account",
       "getStarted": "Get Started"
     }
+  },
+  "promotions": {
+    "signInRequired": "Please sign in to manage your notification preferences",
+    "enabledSuccess": "You'll now receive exclusive offers and promotions!",
+    "disabledSuccess": "Promotions notifications have been turned off",
+    "updateFailed": "Failed to update preferences. Please try again.",
+    "modal": {
+      "title": "Never Miss a Great Deal!",
+      "subtitle": "Stay in the loop with exclusive promotions, flash sales, and personalized offers designed to save you money on every journey.",
+      "benefit1Title": "Flash Sales & Limited Offers",
+      "benefit1Description": "Be the first to know about time-sensitive deals and exclusive discounts before they're gone.",
+      "benefit2Title": "Destination-Specific Promotions",
+      "benefit2Description": "Get tailored offers for the countries you travel to most, plus seasonal deals for your next adventure.",
+      "benefit3Title": "Save on Every Purchase",
+      "benefit3Description": "Combine promotional discounts with cashback and referral rewards for maximum savings.",
+      "toggleEnabled": "You're getting exclusive deals",
+      "toggleDisabled": "Yes, send me exclusive deals!",
+      "toggleHint": "Get notified via email and push notifications",
+      "disclaimer": "We respect your privacy. You may receive promotional messages via email and/or push notifications. You can change your preferences anytime in Account Information. We won't spam you—only valuable offers and deals.",
+      "remindLater": "Remind me later",
+      "dontShowAgain": "Don't show this again"
+    },
+    "inline": {
+      "title": "🎉 Want to save even more?",
+      "description": "Turn on promotional notifications to receive exclusive deals, flash sales, and personalized offers tailored to your travel destinations.",
+      "toggleEnabled": "You're getting exclusive deals",
+      "toggleDisabled": "Yes, send me exclusive deals!",
+      "disclaimer": "You can change your preferences anytime in Account Information. We only send valuable offers—no spam!"
+    }
   }
 }
 
