--- a/src/i18n/locales/ro.json
+++ b/src/i18n/locales/ro.json
@@ -264,7 +264,7 @@
   },
   "howItWorks": {
     "easyAndFast": "Ușor și rapid",
-    "howToSetUpMontyEsim": "Cum să-ți configurezi eSIM-ul",
+    "howToSetUpEsim": "Cum să-ți configurezi eSIM-ul",
     "step": "pas",
     "of": "din"
   },
