feat: add popular destinations carousel with country/region flags and multi-language support
- Added PopularDestinations component with image-based cards for countries and regions
- Implemented carousel with touch swipe support and navigation buttons
- Added country flags (Turkey, USA, Thailand, UAE, Japan, Canada) from Supabase storage
- Added region flags (Europe, Asia, North America, Middle East, Africa, South America)
- Navigation buttons positioned at top-right of carousel headers
- Responsive design: 1 card (mobile), 2 cards (tablet), 4 cards (desktop)
- Added translations for 'Popular Countries' and 'Popular Regions' in all languages (en, de, es, fr, hi, ro)
- Conditional display: title and compatibility message only show on /plans/land route
- Fixed storage bucket paths to use /storage/v1/object/public/media/ for both country and region flags

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -316,7 +316,13 @@
     "Plan Started": "Tarif gestartet",
     "Plan Not Started": "Tarif nicht gestartet",
     "Expired": "Abgelaufen",
-    "Pending": "Ausstehend"
+    "Pending": "Ausstehend",
+    "popularDestinations": {
+      "title": "Beliebte Reiseziele erkunden",
+      "subtitle": "Sofortige Konnektivität in den meistbesuchten Reisezielen der Welt",
+      "countries": "Beliebte Länder",
+      "regions": "Beliebte Regionen"
+    }
   },
   "bundles": {
     "validity": "Gültigkeit",
